codepkg/objects/Warehouse_Product__c.object
<CustomObject>
    <description>Junction between warehouse and and Product. Mulesoft will send warehouse code and SKU code. We have flow which will populate lookup values based on it.</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>check if warehouse Product is active</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_To_Warehouse_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code_And_SKU_Id__c</fullName>
        <description>Format  - WarehouseCode_SKUId</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>It should be concat of Warehouse code and SKU Id joined by -</inlineHelpText>
        <label>Warehouse Code And SKU Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code__c</fullName>
        <description>Warehouse code populate from Mulesoft. Warehouse lookup will be populated from it.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Warehouse Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_SKU_Id__c</fullName>
        <description>SKU Id from Product</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>SKU Id from Product. Based on it Product lookup will populate</inlineHelpText>
        <label>Warehouse SKU Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Entity_Type__c</field>
                <operation>equals</operation>
                <value>Warehouse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_To_Warehouse_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Warehouse Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Warehouse__c</columns>
        <columns>Warehouse_Code__c</columns>
        <columns>Warehouse_SKU_Id__c</columns>
        <columns>Product__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WP-{0000}</displayFormat>
        <label>Warehouse Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>